--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -31,23 +31,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def lesser_of_two_evens(a,b):\n",
-    "    pass"
+    "    if a % 2 == 0 and b % 2 == 0:\n",
+    "        return min(a, b)\n",
+    "    else:\n",
+    "        return max(a, b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,4)"
@@ -55,11 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,5)"
@@ -76,23 +95,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
-    "    pass"
+    "    strs = text.lower().split()\n",
+    "    return strs[0][0] == strs[1][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "animal_crackers('Levelheaded Llama')"
@@ -100,11 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "animal_crackers('Crazy Kangaroo')"
@@ -123,23 +159,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def makes_twenty(n1,n2):\n",
-    "    pass"
+    "    return n1 == 20 or n2 == 20 or n1 + n2 == 20"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "makes_twenty(20,10)"
@@ -147,11 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "makes_twenty(2,3)"
@@ -177,23 +229,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def old_macdonald(name):\n",
-    "    pass"
+    "    # return name[0].upper() + name[1:3] + name[3].upper() + name[4:]\n",
+    "    return name[:3].capitalize() + name[3:].capitalize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MacDonald'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "old_macdonald('macdonald')"
@@ -221,23 +281,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def master_yoda(text):\n",
-    "    pass"
+    "    t = text.split()\n",
+    "    # t.reverse()\n",
+    "    t = t[::-1]\n",
+    "    return ' '.join(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'home am I'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('I am home')"
@@ -245,11 +315,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ready are We'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('We are ready')"
@@ -271,23 +350,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def almost_there(n):\n",
-    "    pass"
+    "    # return (n <= 100 + 10 and n >= 100 -10) or (n <= 200 + 10 and n >= 200 -10)\n",
+    "    return abs(100 - n) <= 10 or abs(200 - n) <= 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(104)"
@@ -295,11 +382,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(150)"
@@ -307,11 +403,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(209)"
@@ -339,23 +444,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def has_33(nums):\n",
-    "    pass"
+    "    '''\n",
+    "    last3 = False\n",
+    "    for n in nums:\n",
+    "        if n == 3 and last3 == True:\n",
+    "            return True\n",
+    "        elif n == 3:\n",
+    "            last3 = True\n",
+    "        else:\n",
+    "            last3 = False\n",
+    "    '''\n",
+    "    for i in range(0, len(nums) - 1):\n",
+    "        # if nums[i] == 3 and nums[i+1] == 3:\n",
+    "        if nums[i:i+2] == [3,3]:\n",
+    "            return True\n",
+    "    return False\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 3])"
@@ -363,9 +490,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 1, 3])"
@@ -373,9 +511,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([3, 1, 3])"
@@ -392,23 +541,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def paper_doll(text):\n",
-    "    pass"
+    "    return ''.join([n * 3 for n in text])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HHHeeellllllooo'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Hello')"
@@ -416,11 +572,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MMMiiissssssiiissssssiiippppppiii'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Mississippi')"
@@ -438,23 +603,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def blackjack(a,b,c):\n",
-    "    pass"
+    "    cards = [a, b ,c]\n",
+    "    total = sum(cards)\n",
+    "    if total <= 21:\n",
+    "        return 21\n",
+    "    elif 11 in cards and total - 10 <= 21:\n",
+    "        return total - 10\n",
+    "    else:\n",
+    "        return 'BUST'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(5,6,7)"
@@ -462,11 +641,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BUST'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blackjack(11,10,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BUST'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,9)"
@@ -474,11 +682,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,11)"
@@ -497,23 +714,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def summer_69(arr):\n",
-    "    pass"
+    "    skip = False\n",
+    "    total = 0\n",
+    "    for a in arr:\n",
+    "        if a == 6:\n",
+    "            skip = True\n",
+    "        elif a == 9:\n",
+    "            skip = False\n",
+    "        elif not skip:\n",
+    "            total += a\n",
+    "            \n",
+    "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([1, 3, 5])"
@@ -521,11 +755,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([4, 5, 6, 7, 8, 9])"
@@ -533,11 +776,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([2, 1, 6, 9, 11])"
@@ -563,35 +815,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 74,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def spy_game(nums):\n",
-    "    pass"
+    "    # return \"007\" in ''.join([n for n in nums if n == 0 or n == 7])\n",
+    "    return '007' in ''.join([str(n) for n in nums if n == 0 or n == 7])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
-    "spy_game([1,2,4,0,0,7,5])"
+    "spy_game([1,2,4,0,0,7,5])\n",
+    "map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,0,2,4,0,5,7])"
@@ -599,14 +869,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,7,2,0,4,5,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check\n",
+    "spy_game([1,0,0,0,2,4,0,5,7])"
    ]
   },
   {
@@ -621,24 +921,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 85,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
-    "    pass\n",
-    "                "
+    "    count = 0\n",
+    "    for n in range(2, num + 1):\n",
+    "        if is_prime(n):\n",
+    "            count += 1\n",
+    "        \n",
+    "    return count   \n",
+    "\n",
+    "def is_prime(num):\n",
+    "    for n in range(2, num):\n",
+    "        if num % n == 0:\n",
+    "            return False;\n",
+    "    \n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "count_primes(100)"
@@ -662,23 +980,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def print_big(letter):\n",
-    "    pass"
+    "    dic = {\n",
+    "        'a': ['  *  ',\n",
+    "              ' * * ',\n",
+    "              '*****',\n",
+    "              '*   *',\n",
+    "              '*   *'],\n",
+    "        'b': ['**** ',\n",
+    "              '*   *',\n",
+    "              '**** ',\n",
+    "              '*   *',\n",
+    "              '**** '],\n",
+    "    }\n",
+    "    for line in dic[letter]:\n",
+    "        print(line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  *  \n",
+      " * * \n",
+      "*****\n",
+      "*   *\n",
+      "*   *\n"
+     ]
+    }
+   ],
    "source": [
     "print_big('a')"
    ]
@@ -707,7 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
